-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
None
-
Ubuntu, 06aa436783a109b58478d13aa0fa1ff32c28bc8f
-
822990698b3298b9413337c0c729d2f27dee70a8
- Create a circle crossing dateline (for example via nodes (67,179.5),(67, -179.5))
- Pan the map to the left until the second marker hits the screen border
Circle disappears from the screen before second marker hits the screen border.
For Gerrit Dashboard: QTBUG-24918 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
22849,2 | Fix drawing of map items that span across dateline | master | qt/qtlocation | Status: MERGED | +2 | 0 |