Fix drawing of map items that span across dateline

Apply wrapping to map mercator coordinates when needed
so that proper screen positions are returned.

Task-number: QTBUG-24918
Change-Id: If48ef2564f76604f2f44601b3969d77cbe138566
Reviewed-by: David Laing <david.laing@nokia.com>
Reviewed-by: Alex Wilson <alex.wilson@nokia.com>